# phymac

./: .replit  app.py  models.py  pyproject.toml
attached_assets/: Estatutos_Fundacion_Final (1).docx  Pasted--L-gica-de-Colores-para-PhyMaC-Dado-el-objetivo-social-de-PhyMaC-que-se-centra-en-la-difusi-n-1735510216879.txt
instance/: blog.db
static/css/: style.css
static/js/: editor.js
templates/: about.html  add_achievement.html  base.html  blog.html  books.html  categories.html  contact.html  edit_profile.html  editor.html  import_document.html  index.html  login.html  post.html  profile.html
utils/: docx_converter.py
