[project]
name = "repl-nix-latexlibraryhub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.2.0",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "markdown>=3.7",
    "psycopg2-binary>=2.9.10",
    "python-docx>=1.1.2",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.3",
    "python-slugify>=8.0.4",
    "slugify>=0.0.1",
]
